Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-759

mdc_enqueue() should clear rq_replay when mdc_enter_request() fails

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.2.0, Lustre 2.1.2
    • Lustre 2.2.0
    • None
    • 3
    • 4847

      This was learned in ORI-263. To be honest, I've little idea why racer on master doesn't hit this. Probably because racer is not being run as frequently on master as it is on Orion. I'll back-port the Orion fix here.

            liwei Li Wei (Inactive)
            liwei Li Wei (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: